// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DesktopNotificationSettings should match snapshot, on max setting 1`] = `
<div>
  <section
    class="section-max form-horizontal "
  >
    <h4
      class="col-sm-12 section-title"
      id="settingTitle"
    >
      Desktop and mobile notifications
    </h4>
    <div />
    <div
      class="sectionContent col-sm-10 col-sm-offset-2"
    >
      <div
        class="setting-list"
        tabindex="-1"
      >
        <div
          class="setting-list-item"
        >
          <fieldset
            id="sendDesktopNotificationsSection"
          >
            <legend
              class="form-legend"
            >
              Send notifications for:
            </legend>
            <div
              class="radio"
            >
              <label>
                <input
                  type="radio"
                  value="all"
                />
                All new messages
              </label>
            </div>
            <div
              class="radio"
            >
              <label>
                <input
                  type="radio"
                  value="mention"
                />
                Mentions, direct messages, and group messages
              </label>
            </div>
            <div
              class="radio"
            >
              <label>
                <input
                  type="radio"
                  value="none"
                />
                Nothing
              </label>
            </div>
          </fieldset>
          <br />
          <div
            class="checkbox single-checkbox"
          >
            <label>
              <input
                class="a11y--active a11y--focused"
                type="checkbox"
              />
              Notify me about replies to threads I'm following
            </label>
          </div>
          <hr />
          <div
            class="checkbox single-checkbox"
          >
            <label>
              <input
                type="checkbox"
              />
              Use different settings for my mobile devices
            </label>
          </div>
          <br />
          <label
            class="singleSelectLabel"
            for="pushMobileNotificationSelectInput"
            id="pushMobileNotificationsLabel"
          >
            Trigger mobile notifications when I am:
          </label>
          <div
            class="_select_h9fbq_2 _select--size-medium_h9fbq_167"
          >
            <div
              class="_select__wrapper_h9fbq_8"
            >
              <button
                aria-controls="pushMobileNotificationSelectInput-listbox"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Trigger mobile notifications when I am:"
                class="_select__control_h9fbq_56"
                id="pushMobileNotificationSelectInput"
                role="combobox"
                type="button"
              >
                <span
                  class="_select__value_h9fbq_82"
                >
                  Offline
                </span>
                <span
                  aria-hidden="true"
                  class="_select__trailing-icon_h9fbq_99"
                >
                  <div
                    aria-hidden="true"
                    class="_icon_1i355_2 _icon--size-12_1i355_30"
                  >
                    <div
                      class="_icon__glyph-area_1i355_9"
                    >
                      <svg
                        fill="currentColor"
                        height="14"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                        />
                      </svg>
                    </div>
                  </div>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="setting-list-item"
        >
          <hr />
          <div
            role="alert"
          />
          <button
            class="btn btn-primary"
            data-testid="saveSetting"
            id="saveSetting"
            type="submit"
          >
            <span>
              Save
            </span>
          </button>
          <button
            class="btn btn-tertiary"
            data-testid="cancelButton"
            id="cancelSetting"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`DesktopNotificationSettings should match snapshot, on min setting 1`] = `
<div>
  <div
    class="section-min"
    data-testid="section-min"
  >
    <div
      class="section-min__header"
    >
      <h4
        class="section-min__title"
        id="desktopAndMobileTitle"
      >
        Desktop and mobile notifications
        <div />
      </h4>
      <button
        aria-expanded="false"
        aria-labelledby="desktopAndMobileTitle desktopAndMobileEdit"
        class="color--link style--none section-min__edit"
        id="desktopAndMobileEdit"
      >
        <i
          aria-hidden="true"
          class="icon-pencil-outline"
          title="Edit Icon"
        />
        Edit
      </button>
    </div>
    <div
      class="section-min__describe"
      id="desktopAndMobileDesc"
    >
      Configure desktop and mobile settings
    </div>
  </div>
</div>
`;

exports[`DesktopNotificationSettings should not show desktop thread notification checkbox when collapsed threads are not enabled 1`] = `
<div>
  <section
    class="section-max form-horizontal "
  >
    <h4
      class="col-sm-12 section-title"
      id="settingTitle"
    >
      Desktop and mobile notifications
    </h4>
    <div />
    <div
      class="sectionContent col-sm-10 col-sm-offset-2"
    >
      <div
        class="setting-list"
        tabindex="-1"
      >
        <div
          class="setting-list-item"
        >
          <fieldset
            id="sendDesktopNotificationsSection"
          >
            <legend
              class="form-legend"
            >
              Send notifications for:
            </legend>
            <div
              class="radio"
            >
              <label>
                <input
                  type="radio"
                  value="all"
                />
                All new messages
              </label>
            </div>
            <div
              class="radio"
            >
              <label>
                <input
                  type="radio"
                  value="mention"
                />
                Mentions, direct messages, and group messages
              </label>
            </div>
            <div
              class="radio"
            >
              <label>
                <input
                  type="radio"
                  value="none"
                />
                Nothing
              </label>
            </div>
          </fieldset>
          <hr />
          <div
            class="checkbox single-checkbox"
          >
            <label>
              <input
                class="a11y--active a11y--focused"
                type="checkbox"
              />
              Use different settings for my mobile devices
            </label>
          </div>
          <br />
          <label
            class="singleSelectLabel"
            for="pushMobileNotificationSelectInput"
            id="pushMobileNotificationsLabel"
          >
            Trigger mobile notifications when I am:
          </label>
          <div
            class="_select_h9fbq_2 _select--size-medium_h9fbq_167"
          >
            <div
              class="_select__wrapper_h9fbq_8"
            >
              <button
                aria-controls="pushMobileNotificationSelectInput-listbox"
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Trigger mobile notifications when I am:"
                class="_select__control_h9fbq_56"
                id="pushMobileNotificationSelectInput"
                role="combobox"
                type="button"
              >
                <span
                  class="_select__value_h9fbq_82"
                >
                  Offline
                </span>
                <span
                  aria-hidden="true"
                  class="_select__trailing-icon_h9fbq_99"
                >
                  <div
                    aria-hidden="true"
                    class="_icon_1i355_2 _icon--size-12_1i355_30"
                  >
                    <div
                      class="_icon__glyph-area_1i355_9"
                    >
                      <svg
                        fill="currentColor"
                        height="14"
                        version="1.1"
                        viewBox="0 0 24 24"
                        width="14"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                        />
                      </svg>
                    </div>
                  </div>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="setting-list-item"
        >
          <hr />
          <div
            role="alert"
          />
          <button
            class="btn btn-primary"
            data-testid="saveSetting"
            id="saveSetting"
            type="submit"
          >
            <span>
              Save
            </span>
          </button>
          <button
            class="btn btn-tertiary"
            data-testid="cancelButton"
            id="cancelSetting"
          >
            Cancel
          </button>
        </div>
      </div>
    </div>
  </section>
</div>
`;
